--- a/BlueConnection/ImageCell.xib
+++ b/BlueConnection/ImageCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -7,44 +7,53 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="245" id="KGk-i7-Jjw" customClass="ImageCell" customModule="BlueConnection" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="245"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="303" id="KGk-i7-Jjw" customClass="ImageCell" customModule="BlueConnection" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="303"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="400" height="244.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="600" height="302.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89f-Z4-yJc">
-                        <rect key="frame" x="8" y="8" width="193" height="21"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Shf-VK-4SW">
+                        <rect key="frame" x="18" y="18" width="563" height="30"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89f-Z4-yJc">
+                                <rect key="frame" x="8" y="4" width="547" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="73l-VS-MCV"/>
-                            <constraint firstAttribute="width" constant="193" id="pSi-Cd-9lr"/>
+                            <constraint firstAttribute="height" constant="30" id="9xK-rY-bEz"/>
+                            <constraint firstAttribute="bottom" secondItem="89f-Z4-yJc" secondAttribute="bottom" constant="5" id="Jan-Vm-qdO"/>
+                            <constraint firstItem="89f-Z4-yJc" firstAttribute="top" secondItem="Shf-VK-4SW" secondAttribute="top" constant="4" id="KvG-bW-xJ2"/>
+                            <constraint firstItem="89f-Z4-yJc" firstAttribute="leading" secondItem="Shf-VK-4SW" secondAttribute="leading" constant="8" id="LLZ-Mp-MPd"/>
+                            <constraint firstAttribute="trailing" secondItem="89f-Z4-yJc" secondAttribute="trailing" constant="8" id="WhU-Vh-NGI"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wJU-wt-WH1">
-                        <rect key="frame" x="100" y="37" width="200" height="200"/>
+                        <rect key="frame" x="183" y="56" width="235" height="235"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="200" id="OfB-RD-QtO"/>
+                            <constraint firstAttribute="width" constant="235" id="baa-Tl-pQN"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="wJU-wt-WH1" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="14.75" id="9XQ-f0-Gwj"/>
-                    <constraint firstItem="wJU-wt-WH1" firstAttribute="top" secondItem="89f-Z4-yJc" secondAttribute="bottom" constant="8" id="GvZ-ch-0c9"/>
-                    <constraint firstItem="wJU-wt-WH1" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="XqY-bP-OJy"/>
-                    <constraint firstAttribute="bottom" secondItem="wJU-wt-WH1" secondAttribute="bottom" constant="8" id="jRo-Al-CVi"/>
-                    <constraint firstItem="89f-Z4-yJc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="lOe-th-Hgf"/>
-                    <constraint firstItem="89f-Z4-yJc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="oNv-MB-5B4"/>
+                    <constraint firstAttribute="bottom" secondItem="wJU-wt-WH1" secondAttribute="bottom" constant="11.5" id="3Fm-hX-GUh"/>
+                    <constraint firstAttribute="trailing" secondItem="Shf-VK-4SW" secondAttribute="trailing" constant="19" id="Cmj-Se-VdY"/>
+                    <constraint firstItem="wJU-wt-WH1" firstAttribute="top" secondItem="Shf-VK-4SW" secondAttribute="bottom" constant="8" id="dnY-XD-JHn"/>
+                    <constraint firstItem="Shf-VK-4SW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="e27-RK-hzk"/>
+                    <constraint firstItem="Shf-VK-4SW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="ewZ-mL-tm9"/>
+                    <constraint firstItem="wJU-wt-WH1" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="y0q-Py-s4o"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="messageImageView" destination="wJU-wt-WH1" id="CGz-5e-evM"/>
                 <outlet property="nameLabel" destination="89f-Z4-yJc" id="DAK-0K-87x"/>
             </connections>
-            <point key="canvasLocation" x="545" y="322.5"/>
+            <point key="canvasLocation" x="415" y="570.5"/>
         </tableViewCell>
     </objects>
 </document>
