--- a/BlueConnection/MessageCell.xib
+++ b/BlueConnection/MessageCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -8,44 +8,65 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="MessageCell" customModule="BlueConnection" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="111" id="KGk-i7-Jjw" customClass="MessageCell" customModule="BlueConnection" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="111"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="400" height="119.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="600" height="110.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cbF-lW-leG">
-                        <rect key="frame" x="8" y="8" width="200" height="21"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZHE-XQ-b4u">
+                        <rect key="frame" x="18" y="18" width="564" height="30"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cbF-lW-leG">
+                                <rect key="frame" x="8" y="8" width="548" height="14"/>
+                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="DHd-Eq-Uga"/>
-                            <constraint firstAttribute="width" constant="200" id="ngA-WK-5HE"/>
+                            <constraint firstItem="cbF-lW-leG" firstAttribute="top" secondItem="ZHE-XQ-b4u" secondAttribute="top" constant="8" id="Hkx-Hy-vZv"/>
+                            <constraint firstItem="cbF-lW-leG" firstAttribute="leading" secondItem="ZHE-XQ-b4u" secondAttribute="leading" constant="8" id="JlD-wo-bHD"/>
+                            <constraint firstAttribute="height" constant="30" id="MfM-FX-77B"/>
+                            <constraint firstAttribute="bottom" secondItem="cbF-lW-leG" secondAttribute="bottom" constant="8" id="RrK-LQ-Al5"/>
+                            <constraint firstAttribute="trailing" secondItem="cbF-lW-leG" secondAttribute="trailing" constant="8" id="rve-Nv-T4T"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="メッセージ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNZ-6h-7At">
-                        <rect key="frame" x="8" y="37" width="384" height="74.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kLg-8n-g2X">
+                        <rect key="frame" x="18" y="56" width="565" height="40"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mess" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNZ-6h-7At">
+                                <rect key="frame" x="8" y="8" width="549" height="24"/>
+                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="16"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.84313725490000002" green="0.91372549020000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="rNZ-6h-7At" firstAttribute="leading" secondItem="kLg-8n-g2X" secondAttribute="leading" constant="8" id="OI7-RG-Tg4"/>
+                            <constraint firstItem="rNZ-6h-7At" firstAttribute="top" secondItem="kLg-8n-g2X" secondAttribute="top" constant="8" id="Rl8-yK-lz2"/>
+                            <constraint firstAttribute="bottom" secondItem="rNZ-6h-7At" secondAttribute="bottom" constant="8" id="Y76-YP-HTT"/>
+                            <constraint firstAttribute="trailing" secondItem="rNZ-6h-7At" secondAttribute="trailing" constant="8" id="gJG-cs-a8o"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="cbF-lW-leG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="a7g-lJ-Cp6"/>
-                    <constraint firstAttribute="trailing" secondItem="rNZ-6h-7At" secondAttribute="trailing" constant="8" id="dVo-SU-f6r"/>
-                    <constraint firstItem="rNZ-6h-7At" firstAttribute="top" secondItem="cbF-lW-leG" secondAttribute="bottom" constant="8" id="f6v-nw-blV"/>
-                    <constraint firstAttribute="bottom" secondItem="rNZ-6h-7At" secondAttribute="bottom" constant="8" id="fFf-tq-3u1"/>
-                    <constraint firstItem="rNZ-6h-7At" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="hiK-Ip-gNj"/>
-                    <constraint firstItem="cbF-lW-leG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="xdN-VJ-cFo"/>
+                    <constraint firstItem="kLg-8n-g2X" firstAttribute="top" secondItem="ZHE-XQ-b4u" secondAttribute="bottom" constant="8" id="4M1-9j-hrf"/>
+                    <constraint firstItem="ZHE-XQ-b4u" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="58O-FG-Wsc"/>
+                    <constraint firstAttribute="trailing" secondItem="kLg-8n-g2X" secondAttribute="trailing" constant="17" id="Ybw-9c-1Gl"/>
+                    <constraint firstItem="kLg-8n-g2X" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="ik1-pn-CiB"/>
+                    <constraint firstAttribute="bottom" secondItem="kLg-8n-g2X" secondAttribute="bottom" constant="14.5" id="pF6-20-Yg0"/>
+                    <constraint firstAttribute="trailing" secondItem="ZHE-XQ-b4u" secondAttribute="trailing" constant="18" id="uir-gp-5GZ"/>
+                    <constraint firstItem="ZHE-XQ-b4u" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="xxm-46-mJt"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="messageLabel" destination="rNZ-6h-7At" id="diN-Nn-T7Q"/>
                 <outlet property="nameLabel" destination="cbF-lW-leG" id="ImS-l8-jEZ"/>
             </connections>
-            <point key="canvasLocation" x="585" y="424"/>
+            <point key="canvasLocation" x="585" y="419.5"/>
         </tableViewCell>
     </objects>
 </document>
